--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,6 +4,6 @@
         <hr>
     </div>
     <ul class="list-group">
-        <a href="#" class="list-group-item" style="cursor: pointer;"></a>
+        <a href="#" class="list-group-item" style="cursor: pointer;" *ngFor="let item of items"></a>
     </ul>
 </div>
