Added Dropdown directive

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -11,11 +11,11 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown" rbDropdown>
+        <a href="#" class="nav-link dropdown-toggle" id="navbarDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           User
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Login</a>
           <a class="dropdown-item" href="#">Other</a>
           <div class="dropdown-divider"></div>
