--- a/src/app/recipes/recipe-list/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix">
+<a [routerLink]="[recipeId]" class="list-group-item clearfix">
     <div class="float-left">
         <h4>{{recipe.name}}</h4>
         <p>{{recipe.description}}</p>
