--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,25 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Recipe Book</a>
+  <a class="navbar-brand" [routerLink]="['/']">Recipe Book</a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Recipes</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/recipes']">Recipes</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Shopping List</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link disabled" [routerLink]="['/shopping-list']">Shopping List</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown" rbDropdown>
-        <a href="#" class="nav-link dropdown-toggle" id="navbarDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          User
+        <a class="nav-link dropdown-toggle" id="navbarDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Recipe Management
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Login</a>
-          <a class="dropdown-item" href="#">Other</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Logout</a>
+          <a (click)="onStore()" style="cursor: pointer;" class="dropdown-item">Store Recipes</a>
+          <a (click)="onFetch()" style="cursor: pointer;" class="dropdown-item">Retrieve Recipes</a>
         </div>
       </li>
     </ul>
